--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">SongApp</string>
-    <string name="app_title">SONG\nAPP</string>
+    <string name="app_name">Песенник</string>
+    <string name="app_title">Песенник</string>
     <string name="verse_title">Куплет</string>
     <string name="chorus_title">Припев</string>
     <string name="bridge_title">Мост</string>
