--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="verse_title">Куплет</string>
     <string name="chorus_title">Припев</string>
     <string name="bridge_title">Мост</string>
-    <string name="times"> (%1$d р.)</string>
+    <string name="times">\u0020(%1$d р.)</string>
     <string name="font_size_setting_label">Размер шрифта</string>
     <string name="collections_not_added">Ни одного сборника ещё не добавлено</string>
     <string name="search_by_full_text">Искать по текстам песен</string>
